syntax = "proto3";
package user;
option go_package = "./pb";

// The User service definition.
service User {   
  // Get all Users with filter - A server-to-client streaming RPC.
  rpc Index(UserFilter) returns (stream UserRequest) {}
  // Create a new User - A simple RPC 
  rpc Create (UserRequest) returns (UserResponse) {}
}

// Request message for creating a new user
message UserRequest {
  uint64 id = 1;  // Unique ID number for a user.
  string name = 2;
  string email = 3;
  string phone= 4;
}

message UserResponse {
  uint64 id = 1;
  bool success = 2;
}
message UserFilter {    
  string keyword = 1;
}